--- a/src/app/teller-in/teller-in/teller-in.component.html
+++ b/src/app/teller-in/teller-in/teller-in.component.html
@@ -15,7 +15,7 @@
               <label class="col-form-label pr-0 font-weight-bold">:</label>
               <div class="col-3 form-inline">
                 <div class="input-group">
-                  <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Mulai">
+                  <input class="form-control" [matDatepicker]="picker" placeholder="Tanggal Valuta">
                   <mat-datepicker #picker></mat-datepicker>
                   <div class="input-group-append">
                     <button mat-raised-button (click)="picker.open()" class="form-control"><i class="fa fa-calendar"></i></button>
@@ -66,7 +66,8 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Keterangan</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
+              <span ></span>
+              <div class="col-4"><textarea rows="4" cols ="50" class="form-control"></textarea></div>
               <span class="col-6"></span>
             </div>
             <!--input 6-->
