--- a/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
+++ b/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
@@ -1,39 +1,39 @@
 <!--Main layout-->
-<div style="margin: 20px;">
-  <!-- Start your project here-->
-  <div class="d-flex flex-column h-100">
-    <div id="outer" class="d-flex flex-column flex-grow">
-      <div class="card">
+<div class="m-3 h-100">
+    <!-- Start your project here-->
+    <div id="outer" class="d-flex flex-column">
+      <div class="card konten">
         <div class="card-body">
-          <h5>SINKRONISASI TRANSAKSI FINANCIAL RETAIL</h5>
-          <!-- Default form contact -->
-          <div class="card">
-            <div class="card-body">
-              <form>
-                <table class="table table-borderless table-sm">
-                  <tr>
-                    <td class="font-weight-normal" style="width: 180px;">Kode Transaksi</td>
-                    <td style="width: 17px;">:</td>
-                    <td>
-                      <select class="custom-select" name="optkodetran" id="optkodetran" style="width: 200px;">
-                        <option selected>Pilih Salah Satu</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                      </select>
-                    </td>
-                   </tr>
-                </table>
-                <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-primary btn-rounded">Proses</button>
-                  <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+          <h5>Sinkronisasi Transaksi Financial Retail</h5>
+  
+          <mdb-card>
+            <mdb-card-body>
+  
+              <!--input 1-->
+              <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3">
+                  <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
+                    <option selected>Pilih Salah Satu</option>
+                    <option value="1">IDR</option>
+                    <option value="2">USD</option>
+                    <option value="3">YEN</option>
+                  </select>
                 </div>
-              </form>
-            </div>
-          </div>
-          <br><br><br>
+              </div>
+              <!--input 1-->
+              <div class="d-flex justify-content-center">
+                  <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+                  <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+              </div>
+            </mdb-card-body>
+          </mdb-card>
+  
+          <span style="height: 10vh;"></span>
         </div>
       </div>
     </div>
+  
   </div>
-</div>
+  
