--- a/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
+++ b/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
@@ -1,58 +1,63 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="m-3 h-100">
   <!-- Start your project here-->
-  <div class="d-flex flex-column h-100">
-    <div id="outer" class="d-flex flex-column flex-grow">
-      <div class="card">
-        <div class="card-body">
-          <h5>PENCARIAN USER</h5>
-          <!-- Default form contact -->
-          <div class="card">
-            <div class="card-body">
-              <form>
-                <table class="table table-borderless">
-                  <tr>
-                    <td style="width: 150px;" class="font-weight-normal">Pilih Kriteria</td>
-                    <td style="width: 5px;">:</td>
-                    <td><input class="form-check-input" type="radio" id="radio1" name="radio1" value="option1" checked>Nama</td>
-                  </tr>
-                  <tr>
-                    <td></td>
-                    <td></td>
-                    <td><input class="form-check-input" type="radio" id="radio1" name="radio1" value="option1">User ID</td>
-                  </tr>
-                  <tr>
-                    <td class="font-weight-normal">Masukkan Nilai</td>
-                    <td>:</td>
-                    <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
-                    <td>
-                      <button type="button" class="btn btn-primary btn-rounded btn-sm">Cari</button>
-                    </td>
-                  </tr>
-                </table>
-              </form>
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+        <h5>Pencarian User</h5>
+
+        <mdb-card>
+          <mdb-card-body>
+            <!--input 1-->
+            <div class="form-group row ">
+              <label class="col-2 col-form-label  font-weight-bold">Pilih Kriteria</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3 custom-control custom-radio">
+                <!-- Default unchecked -->
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="defaultUnchecked" name="defaultExampleRadios"
+                    mdbInputDirective>
+                  <label class="custom-control-label" for="defaultUnchecked">Nama</label>
+                </div>
+                <!-- Default checked -->
+                <div class="custom-control custom-radio">
+                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios" checked
+                    mdbInputDirective>
+                  <label class="custom-control-label" for="defaultChecked">User ID</label>
+                </div>
+              </div>
+              <span class="col-6"></span>
             </div>
-          </div>
-          <br>
-          <h5>PEMBUATAN USER BARU</h5>
-          <div class="card">
-            <div class="card-body">
-              <form>
-                <table class="table table-borderless">
-                  <tr>
-                    <td style="width: 170px;" class="font-weight-normal">User ID Baru</td>
-                    <td style="width: 5px;">:</td>
-                    <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
-                    <td>
-                      <button type="button" class="btn btn-primary btn-rounded btn-sm">Buat Baru</button>
-                    </td>
-                  </tr>
-                </table>
-              </form>
+            <!--input 1-->
+
+            <!--input 2-->
+            <div class="form-group row">
+              <label class="col-2 col-form-label  font-weight-bold">Masukan Nilai</label>
+              <label class="col-form-label pr-0  font-weight-bold">:</label>
+              <div class="col-3"><input type="text" class="form-control"></div>
+              <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>&nbsp;&nbsp;&nbsp;&nbsp;Cari&nbsp;&nbsp;&nbsp;&nbsp;</button>
+              <span class="col-6"></span>
             </div>
-          </div>
-        </div>
+            <!--input 2-->
+            <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan User Baru</label>
+                <span class="col-6"></span>
+              </div>
+            <!--input 3-->
+            <div class="form-group row">
+                <label class="col-2 col-form-label  font-weight-bold">User ID Baru</label>
+                <label class="col-form-label pr-0  font-weight-bold">:</label>
+                <div class="col-3"><input type="text" class="form-control"></div>
+                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Buat Baru</button>
+                <span class="col-6"></span>
+              </div>
+            <!--input 3-->
+          </mdb-card-body>
+        </mdb-card>
+
+        <span style="height: 10vh;"></span>
       </div>
     </div>
   </div>
+
 </div>
