--- a/src/app/usermaintenance/ganti-password/ganti-password.component.html
+++ b/src/app/usermaintenance/ganti-password/ganti-password.component.html
@@ -1,59 +1,56 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div class="m-3 h-100">
     <!-- Start your project here-->
-    <div class="d-flex flex-column h-100">
-      <div id="outer" class="d-flex flex-column flex-grow">
-        <div class="card">
-          <div class="card-body">
-            <h5>UBAH PASSWORD USER</h5>
-            <!-- Default form contact -->
-            <div class="card">
-              <div class="card-body">
-                <form>
-                  <table class="table table-borderless table-sm">
-                    <tr style="height: 10px;">
-                      <td style="width: 190px;" class="font-weight-normal">User ID</td>
-                      <td style="width: 5px;">:</td>
-                      <td style="width: 500px;"><input type="text" style="width: 250px;" disabled class="form-control form-control-sm"></td>
-                      <td style="width: 350px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td colspan="2"></td>
-                    </tr>
-                    <tr>
-                      <td class="font-weight-normal">Password Lama</td>
-                      <td>:</td>
-                      <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="font-weight-normal">Password Baru</td>
-                      <td>:</td>
-                      <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="font-weight-normal">Ketik Ulang Password Baru</td>
-                      <td>:</td>
-                      <td><input type="text" style="width: 250px;" class="form-control form-control-sm"></td>
-                    </tr>
-                  </table>
-                  <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary btn-rounded">Proses</button>
-                    <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
-                  </div>
-                </form>
-              </div>
+    <div id="outer" class="d-flex flex-column">
+        <div class="card konten">
+            <div class="card-body">
+                <h5>Ubah Password User</h5>
+
+                <mdb-card>
+                    <mdb-card-body>
+
+                        <!--input 1-->
+                        <div class="form-group row">
+                            <label class="col-2 col-form-label  font-weight-bold">User ID</label>
+                            <label class="col-form-label pr-0  font-weight-bold">:</label>
+                            <div class="col-3"><input type="text" value ="JATENGSP" disabled="disabled" class="form-control"></div>
+                            <span class="col-6"></span>
+                        </div>
+                        <!--input 1-->
+                        <!--input 2-->
+                        <div class="form-group row">
+                            <label class="col-2 col-form-label  font-weight-bold">Password Lama</label>
+                            <label class="col-form-label pr-0  font-weight-bold">:</label>
+                            <div class="col-3"><input type="text" class="form-control"></div>
+                            <span class="col-6"></span>
+                        </div>
+                        <!--input 2-->
+                        <!--input 3-->
+                        <div class="form-group row">
+                            <label class="col-2 col-form-label  font-weight-bold">Password Baru</label>
+                            <label class="col-form-label pr-0  font-weight-bold">:</label>
+                            <div class="col-3"><input type="text" class="form-control"></div>
+                            <span class="col-6"></span>
+                        </div>
+                        <!--input 3-->
+                        <!--input 4-->
+                        <div class="form-group row">
+                            <label class="col-2 col-form-label  font-weight-bold">Ketik Ulang Password Baru</label>
+                            <label class="col-form-label pr-0  font-weight-bold">:</label>
+                            <div class="col-3"><input type="text" class="form-control"></div>
+                            <span class="col-6"></span>
+                        </div>
+                        <!--input 4-->
+                        <div class="d-flex justify-content-center">
+                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
+                            <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
+                        </div>
+                    </mdb-card-body>
+                </mdb-card>
+
+                <span style="height: 10vh;"></span>
             </div>
-            <br><br><br>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
-  
+
+</div>
