add trans.lim form

--- a/src/app/nasabah/pencarian-nasabah/komponen/ubah-transaksi-limit/ubah-transaksi-limit.component.html
+++ b/src/app/nasabah/pencarian-nasabah/komponen/ubah-transaksi-limit/ubah-transaksi-limit.component.html
@@ -4,11 +4,15 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Setoran Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <input type="text" class="form-control">
+  </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Setoran</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <input type="text" class="form-control">
+  </div>
 </div>
 <!--baris 1-->
 
@@ -16,11 +20,11 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Setoran Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3"><input type="text" class="form-control"></div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Setoran Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3"><input type="text" class="form-control"></div>
 </div>
 <!--baris 2-->
 
@@ -29,12 +33,12 @@
   <label class="col-2 col-form-label font-weight-bold">Limit Penarikan Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
   <div class="col-3">
-      <label class="col-form-label">0.0</label>
+    <input type="text" class="form-control">
   </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Penarikan Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3"><input type="text" class="form-control"></div>
 </div>
 <!--baris 2-->
 
@@ -42,14 +46,15 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Penarikan Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3"><input type="text" class="form-control"></div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Penarikan Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3"><input type="text" class="form-control"></div>
 </div>
 <!--baris 3-->
 
 <div class="d-flex justify-content-end">
-  <button type="button" class="btn btn-primary" (click)="funcUbahLimit()">Ubah</button>
+  <button type="button" class="btn btn-primary">Proses</button>
+  <button type="button" class="btn btn-primary" (click)="funcUbahLimit()">Kembali</button>
 </div>
