--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -8,10 +8,12 @@
 
         <mdb-card>
           <mdb-card-body>
-              <h6>Masukan Kriteria Pencarian</h6>
+            <div class="form-group row">
+                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Masukan Kriteria Pencarian</label>
+            </div>
             <!--input 1-->
             <div class="form-group row ">
-              <label class="col-2 col-form-label  font-weight-bold">Pilih Kriteria</label>
+              <label class="col-2 col-form-label font-weight-bold">Pilih Kriteria</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
               <div class="col-3 custom-control custom-radio">
                 <!-- Default unchecked -->
@@ -20,11 +22,11 @@
                     mdbInputDirective>
                   <label class="custom-control-label" for="defaultUnchecked">Nomor Kartu</label>
                 </div>
-
+            
                 <!-- Default checked -->
                 <div class="custom-control custom-radio">
-                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios"
-                    checked mdbInputDirective>
+                  <input type="radio" class="custom-control-input" id="defaultChecked" name="defaultExampleRadios" checked
+                    mdbInputDirective>
                   <label class="custom-control-label" for="defaultChecked">Nama Pada Kartu</label>
                 </div>
               </div>
