diubah sama dian

--- a/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
+++ b/src/app/usermaintenance/cari-baru-user/cari-baru-user.component.html
@@ -24,7 +24,7 @@
                   <tr>
                     <td class="font-weight-normal">Masukkan Nilai</td>
                     <td>:</td>
-                    <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
+                    <td><input type="int" class="form-control form-control-sm" style="width: 250px;"></td>
                     <td>
                       <button type="button" class="btn btn-primary btn-rounded btn-sm">Cari</button>
                     </td>
